# CertifyBot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
docker/admin/: Dockerfile
docker/app/: Dockerfile
scripts/: compressor.py  ditectrev.py
service/: admin.py  main.py  services.py  settings.py
service/database/: __init__.py  core.py
service/database/models/: __init__.py  base.py  course.py  question.py  user.py
service/migrations/: env.py  helpers.py
service/migrations/versions/: 18647bd4e8cf_added_course_table.py  2c0d52b74fa7_add_code_and_description_to_course.py  5667928f3225_added_user_table.py  64bf0768157a_initial.py  66e86e8dfbbc_added_question_and_answer_tables.py  78d57585eaec_unique_tg_id.py  80385fbfb644_add_answerhistory_model.py  8caeed8a5a33_fill_data_dva_c02.py  8caeed8a5a33_fill_data_into_question_and_answer_.py  97e45c2507c6_fill_data_saa_c03.py  a212e4c61c5a_add_is_active_to_usercourse.py  e6b629f1fbcb_rename_course.py
service/migrations/versions/fixtures/: AWS-Developer-Associate-DVA-C02.json  AWS-Solutions-Architect-Associate-SAA-C03.json
service/tests/: __init__.py  conftest.py  factories.py  test_handlers.py  test_models.py
