[tool.poetry]
name = "certifybot"
version = "0.1.0"
description = "Certify telegram bot"
readme = "README.md"
authors = [
    "Andrey Doroschenko <andrey.daraschenka@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.1"
asyncpg = "0.27.0"
sqlalchemy = { version = "2.0.27", extras = ["asyncio"] }
aiogram = { version = "3.4.1", optional = true }
fastapi = { version = "0.110.0", optional = true }
sqladmin = { version = "0.16.1", optional = true }
uvicorn  = { version = "0.29.0", extras = ["standard"], optional = true }
certifi = "^2024.2.2"
sqlalchemy-helpers = "0.13.0"

[tool.poetry.extras]
bot = ["aiogram"]
admin = ["fastapi", "sqladmin", "uvicorn"]

[tool.poetry.dev-dependencies]
pillow = "10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
